Bug Fix in Razorpay Integration, fix referral flow, and implement accurate ornament price calculation with GST, CGST, SGST & first order discount at checkout